fix: improved  chat card visibility animations

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -320,3 +320,15 @@
 	opacity: 0;
 	/* transition: opacity 0.01s ease-in-out; */
 }
+
+.cardo.hide-top {
+	opacity: 0;
+	transform: translateY(-20px);
+	pointer-events: none;
+}
+
+.cardo.hide-bottom {
+	opacity: 0;
+	transform: translateY(20px);
+	pointer-events: none;
+}
